商品搜索+登录bug

--- a/components/empty-show/index.wxml
+++ b/components/empty-show/index.wxml
@@ -1,4 +1,4 @@
-<view class="empty-show" wx:if="{{ visible }}">
+<view class="{{ rootClass ? 'my-class' : 'empty-show' }}" wx:if="{{ visible }}">
   <image src="{{ icon }}" />
   <text>{{title}}</text>
   <block wx:if="{{ buttons.length }}">
