--- a/pages/map/index.wxml
+++ b/pages/map/index.wxml
@@ -5,7 +5,7 @@
         <van-icon name="apps-o" color="#fff" size="25px" />
       </view>
     </view>
-    <view class="name">菜单大全</view>
+    <view class="name">菜单列表</view>
     <van-icon name="eye-o" color="#fff" size="40px" />
   </view>
   <view class="txt">点我查看公司菜单列表</view>
@@ -18,7 +18,7 @@
         <van-icon name="cluster-o" color="#fff" size="25px" />
       </view>
     </view>
-    <view class="name">规格大全</view>
+    <view class="name">规格列表</view>
     <van-icon name="eye-o" color="#fff" size="40px" />
   </view>
   <view class="txt">点我查看公司规格列表</view>
