--- a/components/stateBox/index.wxml
+++ b/components/stateBox/index.wxml
@@ -1,6 +1,7 @@
 <view class="root-state">
   {{
     state === 1 ? '待付款' :
-    state === 2 ? '待发货' : '已完成'
+    state === 2 ? '待发货' :
+    state === 3 ? '已完成' : '已取消'
   }}
 </view>
