--- a/pages/order-detail/index.wxss
+++ b/pages/order-detail/index.wxss
@@ -1,9 +1,9 @@
 .good-box{
-  padding: 20rpx 15rpx 30rpx;
+  padding: 20rpx 15rpx 110rpx;
 }
 
 .good-box-iphonex{
-  padding-bottom: 80rpx;
+  padding-bottom: 140rpx;
 }
 
 .good-item{
@@ -94,4 +94,35 @@
 .order-btn-box{
   display: flex;
   justify-content: flex-end;
+}
+
+.btn-group{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  z-index: 999;
+}
+
+.btn-group-iphoneX{
+  padding-bottom: 30rpx;
+}
+
+.btn-group view{
+  flex: 1;
+  height: 100rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 35rpx;
+}
+
+.btn-left{
+  background: crimson;
+}
+
+.btn-right{
+  background: darkcyan;
 }
