--- a/pages/order-detail/index.wxss
+++ b/pages/order-detail/index.wxss
@@ -1,3 +1,34 @@
+.order-flex{
+  padding: 20rpx;
+  display: flex;
+}
+
+.order-flex-item{
+  flex: 1;
+  background: #fff;
+  text-align: center;
+}
+
+.order-flex-item:nth-of-type(2) {
+  margin: 0 20rpx;
+}
+
+.order-flex-item:first-of-type>view:last-of-type{
+  display: flex;
+  justify-content: center;
+}
+
+.order-flex-item>view{
+  padding: 20rpx 0;
+}
+
+.order-flex-item>view:first-of-type{
+  color: #333;
+  font-size: 30rpx;
+  font-weight: bold;
+  border-bottom: 1rpx solid #e8e8e8;
+}
+
 .good-box{
   padding: 20rpx 15rpx 110rpx;
 }
