--- a/pages/order-detail/index.wxss
+++ b/pages/order-detail/index.wxss
@@ -151,9 +151,9 @@
 }
 
 .btn-left{
-  background: crimson;
+  background: #ff976a;
 }
 
 .btn-right{
-  background: darkcyan;
+  background: #1989fa;
 }
