--- a/pages/good/index.wxml
+++ b/pages/good/index.wxml
@@ -25,8 +25,8 @@
         </view>
         <van-swipe-cell right-width="{{ 65 }}" wx:for="{{item.children}}" wx:for-item="todu" wx:for-index="i" wx:key data-id="{{todu.id}}" disabled="{{ userInfo.role_name !== 'admin'}}">
           <view class="good-box">
-            <view class="cu-avatar round lg" style="background-image:url({{todu.coverImg}});"></view>
-            <view class="good-content">
+            <view class="cu-avatar round lg" style="background-image:url({{todu.coverImg}});" bindtap="viewImg" data-item="{{todu.coverImg}}"></view>
+            <view class="good-content" bindtap="linkDetail"  data-id="{{todu.id}}">
               <view class="good-name">{{todu.name}}</view>
               <view class="good-desc">{{todu.desc}}</view>
               <view class="good-num">总销售 {{todu.saleNum}} 次</view>
@@ -34,8 +34,8 @@
                 <text>￥</text>{{todu.sellSingle}}
               </view>
             </view>
-            <view class="good-btn" bindtap="showSpace" data-item="{{todu}}" wx:if="{{ userInfo.role_name === 'admin' }}">
-              <van-icon name="edit" size="30px" color="#3963bc" bindtap="editGood" data-id="{{todu.id}}" />
+            <view class="good-btn" wx:if="{{ userInfo.role_name === 'admin' }}">
+              <van-icon name="edit" size="35px" color="#3963bc" bindtap="editGood" data-id="{{todu.id}}" />
             </view>
           </view>
           <view slot="right" class="remove" bindtap="remove" data-item="{{item}}" data-todu="{{todu}}" data-index="{{index}}" data-i="{{i}}">删除</view>
