--- a/pages/order/index.wxml
+++ b/pages/order/index.wxml
@@ -43,20 +43,9 @@
       <text class="red">{{item.state === 1 ? '待付款' : item.state === 2 ? '待发货' : item.state === 3 ? '已完成' : '已取消'}}</text>
     </view>
   </van-cell>
-  <van-cell wx:if="{{item.customerName}}">
-    <view slot="title" class="order-line">
-      <text>客户名称</text>
-      <text class="red">{{item.customerName}}</text>
-    </view>
-  </van-cell>
-  <van-cell wx:if="{{item.customerPhone}}" title="客户手机号" value="{{item.customerPhone}}">
-    <view slot="title" class="order-line">
-      <text>客户手机号</text>
-      <text>{{item.customerPhone}}</text>
-    </view>
-  </van-cell>
-  <van-cell wx:if="{{item.customerSite}}" title="客户地址" label="{{item.customerSite}}" border="{{ false }}">
-  </van-cell>
+  <van-cell wx:if="{{item.customerName}}" title="客户姓名" value="{{item.customerName}}"></van-cell>
+  <van-cell wx:if="{{item.customerPhone}}" title="客户手机" value="{{item.customerPhone}}"></van-cell>
+  <van-cell wx:if="{{item.customerSite}}" title="客户地址" value="{{item.customerSite}}" border="{{ false }}"></van-cell>
   <wux-white-space />
   <van-steps
     wx:if="{{item.state !== 4}}"
