--- a/pages/order-confirm/index.wxml
+++ b/pages/order-confirm/index.wxml
@@ -32,7 +32,7 @@
     />
   </van-cell-group>
   <view class="good-item" wx:for="{{shopList}}" wx:key>
-    <image src="{{item.coverImg}}" mode="aspectFill" />
+    <image src="{{item.coverImg}}" mode="aspectFill" bindtap="viewImg" data-item="{{item.coverImg}}" />
     <view class="good-info">
       <view class="good-name">{{item.name}}</view>
       <view class="good-tip"><text>已选规格：</text>{{item.num}}{{item.unitType === 1 ? item.unitSingleName : item.unitAllName}}、{{
