--- a/pages/search/index.wxml
+++ b/pages/search/index.wxml
@@ -53,8 +53,8 @@
 
   <view class="container">
     <view class="good-box" wx:for="{{ goodList }}" wx:key data-id="{{item.id}}">
-      <view class="cu-avatar round lg" style="background-image:url({{item.coverImg}});"></view>
-      <view class="good-content">
+      <view class="cu-avatar round lg" style="background-image:url({{item.coverImg}});" bindtap="viewImg" data-item="{{item.coverImg}}"></view>
+      <view class="good-content" bindtap="linkDetail"  data-id="{{item.id}}">
         <view class="good-name">{{item.name}}</view>
         <view class="good-desc">{{item.desc}}</view>
         <view class="good-num">总销售 {{item.saleNum}} 次</view>
